atualização do portifoleo para funcionamento, ajuste nos textos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="hero">
         <h1>Sua visão, editada com perfeição.</h1>
-        <p>Elevando o nível das suas produções através de storytelling visual e técnicas avançadas de pós-produção.</p>
+        <p>Edição de vídeo profissional e mentoria prática para quem quer evoluir na criação de conteúdo e se destacar no digital.</p>
         <div class="scroll-indicator">
             <i class="fas fa-chevron-down"></i>
         </div>
@@ -34,7 +34,11 @@
 
     <section class="content-section">
         <div class="video-container">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=S-4hwfyK-XQ&list=RDS-4hwfyK-XQ&start_radio=1" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+        <div class="hero">
+            <p>Sou editor de vídeo com foco em storytelling e impacto visual. Além dos projetos profissionais, ajudo editores iniciantes a evoluírem com mentoria prática, feedback real e direcionamento de mercado.</p>
         </div>
 
         <div class="pricing-grid">
@@ -56,13 +60,13 @@
         </div>
 
         <div class="btn-container">
-            <a href="#portfolio" class="btn-repo">EXPLORAR PORTFÓLIO COMPLETO</a>
+            <a href= "portfoio.html" class="btn-repo">EXPLORAR PORTFÓLIO COMPLETO</a>
         </div>
     </section>
     </section>
 
     <script>
-    // Hide nav on scroll down, show on scroll up
+    // Ocultar a navegação ao rolar para baixo, exibir ao rolar para cima
     (function(){
         const nav = document.querySelector('.site-nav');
         if(!nav) return;
