--- a/portfoio.html
+++ b/portfoio.html
@@ -9,6 +9,49 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>seu portfólio Aqui</h1>
+    <h1 class="titulo-portfolio">PORTFÓLIO COMPLETO</h1>
+    <p class="subtitulo-portfolio">A seguir, você pode conferir alguns vídeos do meu portfólio de edição. Esses projetos mostram minha criatividade, técnica e evolução como editor.</p>
+
+    <section div class="content-section">
+        <div class="pricing-grid">
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe> 
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+            <div>
+                <iframe src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc"></iframe>
+            </div>
+        </div> 
+
+    </section>
 </body>
 </html>
