video com auto play

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <section class="content-section">
         <div class="video-container">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/watch?v=vO0_06BS9dc" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vO0_06BS9dc?autoplay=1&mute=1" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="hero">
-            <p>Sou editor de vídeo com foco em storytelling e impacto visual. Além dos projetos profissionais, ajudo editores iniciantes a evoluírem com mentoria prática, feedback real e direcionamento de mercado.</p>
+             <p>Sou editor de vídeo com foco em storytelling e impacto visual. Além dos projetos profissionais, ajudo editores iniciantes a evoluírem com mentoria prática, feedback real e direcionamento de mercado.</p>
         </div>
 
         <div class="pricing-grid">
